# cc2-webcontrol

./: .dockerignore  .gitignore  Cargo.toml  DIAGNOSIS.md  Dockerfile  LICENSE  build.rs  docker-compose.windows.yml  docker-compose.yml  readme.md
.github/workflows/: build-backend.yml  build-frontend.yml  build-release.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  api.ts  stores.ts  ws.ts
frontend/src/lib/: AMSPanel.svelte  AuxControls.svelte  BedMeshPanel.svelte  Camera.svelte  Controls.svelte  DetectionPanel.svelte  FileList.svelte  Onboarding.svelte  PrintHeader.svelte  PrintModal.svelte  SettingsModal.svelte  Topbar.svelte
frontend/src/lib/onboarding/: PhaseOnePrinter.svelte  PhaseThreeNotifications.svelte  PhaseTwoDetection.svelte
frontend/src/lib/settings/: SectionDanger.svelte  SectionDetection.svelte  SectionGeneral.svelte  SectionMaintenance.svelte  SectionNotifications.svelte  SectionUI.svelte
scripts/: audit_comments.sh  uninstall.sh  webif
src/: camera.rs  config.rs  docker.rs  error.rs  main.rs  update.rs
src/api/: bedmesh.rs  camera.rs  detection.rs  logs.rs  mod.rs  notifications.rs  printer.rs  router.rs  settings.rs  setup.rs  snapshots.rs  upload.rs  version.rs  ws.rs
src/db/: mod.rs
src/detection/: engine.rs  grouping.rs  mod.rs  obico.rs
src/notifications/: manager.rs  mod.rs  ntfy.rs  payload.rs  webhook.rs
src/printer/: client_raw.rs  client_ws.rs  commands.rs  discovery.rs  manager.rs  models.rs  state.rs
